# tkgis

./: ARCHITECTURE.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  TKGIS_TASKGROUP.md  pyproject.toml  requirements-dev.txt  requirements.txt  tkgis.ps1  tkgis.sh
.github/workflows/: ci.yml  publish.yml
docs/: ADR-001-Cached-Vector-Reprojection.md  ADR-002-Monolithic-Workflow-Refactoring.md  plugin_development.md  user_guide.md
scripts/: test_local.py  test_local.sh
src/tkgis/: __init__.py  __main__.py  app.py  config.py  constants.py
src/tkgis/analysis/: __init__.py  change_detection.py  interpolation.py  time_series.py  zonal.py
src/tkgis/app_ui/: menu_builder.py  toolbar_builder.py
src/tkgis/canvas/: __init__.py  map_canvas.py  minimap.py  overlays.py  tiles.py  transform.py
src/tkgis/charts/: __init__.py  base.py  container.py  histogram.py  scatter.py  spectral.py  time_series.py
src/tkgis/crs/: __init__.py  engine.py  formatting.py  selector.py
src/tkgis/io/: __init__.py  raster_display.py  raster_geoloc.py  raster_metadata.py  raster_tiles.py  vector.py  vector_tiles.py
src/tkgis/models/: __init__.py  crs.py  events.py  geometry.py  layers.py  project.py  tools.py
src/tkgis/panels/: __init__.py  attribute_table.py  base.py  chart_panel.py  layer_tree.py  log_console.py  properties_dialog.py  registry.py  time_slider.py  toolbox.py  workflow_builder.py
src/tkgis/plugins/: __init__.py  base.py  discovery.py  manager.py  manifest.py  providers.py
src/tkgis/plugins/builtin/: __init__.py  raster_provider.py  vector_provider.py  voxelvault_provider.py
src/tkgis/processing/: __init__.py  executor.py  workflow_io.py
src/tkgis/query/: __init__.py  engine.py  expression.py
src/tkgis/resources/: __init__.py
src/tkgis/temporal/: __init__.py  manager.py  raster_stack.py
src/tkgis/tools/: __init__.py  identify.py  measure.py  navigation.py  select.py
src/tkgis/widgets/: __init__.py  data_table.py  status_bar.py
src/tkgis/workflow/: __init__.py  builder_window.py  canvas.py  dnd.py  edges.py  history.py  inspector.py  layer_nodes.py  models_fallback.py  palette.py
tests/: conftest.py  conftest_raster.py  test_analysis.py  test_app.py  test_attribute_table.py  test_canvas.py  test_canvas_workflow_integration.py  test_charts.py  test_crs.py  test_integration.py  test_layer_manager.py  test_models.py  test_plugins.py  test_processing.py  test_query.py  test_raster.py  test_temporal.py  test_tools.py  test_vector.py  test_voxelvault_integration.py  test_workflow_canvas.py
tests/fixtures/: test_points.geojson  test_raster.tif
